2006-07-26  Roland Dreier  <rdreier@cisco.com>

	* src/verbs.c (ibv_reg_mr, ibv_dereg_mr): Add calls to
	ibv_dontfork_range() and ibv_dofork_range() for memory regions
	registered by library consumers.

	* include/infiniband/verbs.h: Add declaration of ibv_fork_init().

	* include/infiniband/driver.h: Add declarations of
	ibv_dontfork_range() and ibv_dofork_range().

	* src/memory.c: Rewrite to use a red-black tree instead of a
	linked list.  Change from doing mlock()/munlock() to
	madvise(..., MADV_DONTFORK) and madvise(..., MADV_DOFORK), and
	change the name of the entry points to ibv_dontfork_range() and
	ibv_dofork_range().  Add ibv_fork_init() for applications to
	request fork-safe behavior.

	* src/ibverbs.h: Kill off unused declarations.

	* src/init.c (ibverbs_init): Get rid of call to ibv_init_mem_map().

	* include/infiniband/verbs.h: Add addr and length field to struct
	ibv_mr so that memory regions can be madvised().  This changes the
	ABI, since the layout of struct ibv_mr is changed.

2006-07-04  Roland Dreier  <rdreier@cisco.com>

	* include/infiniband/arch.h: Fix typo in sparc mb()
	implementation: the asm should just be empty -- the "sync"
	instruction was mistakenly cut and pasted from the ppc version.

2006-06-07  Sean Hefty     <sean.hefty@intel.com>

	* src/verbs.c include/infiniband/verbs.h: Add new routines:
	ibv_init_ah_from_wc() and ibv_create_ah_from_wc() to simplify UD QP
	communication.

	* src/marshall.c include/infiniband/marshall.h: Expose
	ibv_copy_ah_attr_from_kern to retrieve ibv_ah_attr from kernel for
	a UD QP.

2006-06-01  Roland Dreier  <rdreier@cisco.com>

	* src/device.c (ibv_get_device_list): Actually return a
	NULL-terminated array as the documentation promises.

2006-05-31  Roland Dreier  <rdreier@cisco.com>

	* src/init.c (find_drivers): Fix memory leak: the result of
	asprintf() needs to be freed when we're done with it.

	* examples/asyncwatch.c (event_name_str): Print human-readable